src/main/resources/static/css/alovoa.css
@font-face {
	font-family: "Montserrat";
	src: url("../fonts/Montserrat/Montserrat-Medium.ttf") format("truetype");
}

@font-face {
	font-family: "Bree_Serif";
	src: url("../fonts/Bree_Serif/BreeSerif-Regular.ttf") format("truetype");
}

html {
	min-width: 240px;
}

* {
	scrollbar-width: none;
	font-family: "Montserrat" !important;
	word-wrap: break-word;
}

::-webkit-scrollbar {
	width: 0; /* Remove scrollbar space */
	background: transparent; /* Optional: just make scrollbar invisible */
}
/*
h1, h2, h3, h4, h5, h6 {
	font-family: "Abril_Fatface" !important;
}
*/

.swiper-button-next, .swiper-button-prev {
	color: #4a4a4a;
}

button {
	cursor: pointer;
	border-radius: 290486px;
}

.button, .input, .select, select {
	border-radius: 290486px;
}

.input {
	padding-left: 16px;
}

.center-parent {
	display: flex;
	align-items: center;
	justify-content: center;
}

#captcha-refresh-button {
	height: 70px;
	width: 70px;
	font-size: 1.7rem;
	margin-left: 12px;
}

#main {
	min-height: 100vh;
}

#main-logged-in {
	min-height: calc(100vh - 50px);;
}

.navbar-brand {
	text-transform: uppercase;
}

.profile-pic {
	border-radius: 12px;
}

.card {
	border-radius: 12px;
}

.navbar-item img {
	max-height: initial;
}

.select, .select select {
	width: 100%;
}

.asterisk {
	float: left;
	padding-left: 4px;
	color: red;
}

.left {
	float: left;
}

.colored svg {
	color: white;
}

.register-warning {
	color: red;
	padding-bottom: 8px;
}

.navbar {
	display: flex;
	/*background-image: linear-gradient(141deg, #159dc6 0, #3298dc 71%, #4389e5 100%);*/
}

.navbar-end {
	justify-content: flex-end;
	margin-left: auto;
	display: flex;
}

.navbar-item svg {
	color: white;
	padding-right: 4px;
	font-size: 1.5em;
}

.navigation-item.new * {
	color: #FFA000 !important;
}

.navigation-item div {
	margin: auto;
}

.navigation-item div svg {
	padding-right: 4px;
}

#navbar-item-language path {
	color: white;
}

#navbar-item-language:hover path {
	color: #0a0a0a;;
}

.notification {
	padding: 0.5rem 1rem 0.5rem 1rem;
}

.center-children {
	display: flex;
	justify-content: center;
}

.slider-container {
	display: flex;
}

.slider {
	flex: 1;
}

.slider-container p {
	padding-left: 8px;
}

.left {
	float: left;
}

.right {
	float: right;
}

.full-width {
	display: block;
	width: 100%;
}

.button.icon-and-text svg {
	margin-right: 4px;
}

.hidden {
	visibility: hidden;
}

.datetimepicker-clear-button {
	display: none;
}

input[type=range].slider {
	margin: initial;
}

.datepicker-nav svg {
	color: white;
}

#navbar-item-register {
	padding-right: 0px;
}

#captcha {
	max-width: 206px;;
}

#nav-search {
	background-color: #ec417a;
}
#nav-donate {
	background-color: #f4511e;
}
#nav-alerts {
	background-color: #e53935;
}
#nav-chats {
	background-color: #43a047;
}
#nav-profile {
	background-color: #00897b;
}
/*
.switch[type=checkbox]:checked+label::before,
.switch[type=checkbox]:checked+label:before {
 background:#ec417a
}
*/

.datetimepicker-dummy-input {
	min-width: 232px;
}

.datepicker-nav .button.is-text:active, .datepicker-nav .button.is-text:focus
	{
	background: #00d1b2;
}

.datepicker-year span, .datepicker-month, .date-item {
	color: #4a4a4a !important;
}

#iframe-div {
	position: fixed;
	display: none;
	width: 100vw;
	height: 100vh;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 99999;
}

#iframe-close-icon {
	padding: 4px;
	height: 50px;
	width: 50px;
	cursor: pointer;
}

#iframe-header {
	height: 50px;
	display: flex;
	justify-content: flex-end;
	background-color: white;
	border-bottom: 1px solid rgba(219, 219, 219, .5);
	background-color: white;
}

#iframe {
	width: 100vw;
	height: calc(100vh - 50px);
}

.loader-parent {
	position: fixed;
	display: none;
	width: 100vw;
	height: 100vh;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 100000;
	align-items: center;
	justify-content: center;
	background-color: rgba(18, 18, 18, 0.9);
}

#audio {
	width: 270px;
}

@media screen and (max-width: 700px) {
	.navigation-item span {
		display: none;
	}
}

/* DARK THEME */
@media ( prefers-color-scheme : dark) {
	body, .card, .box, .textarea, .footer, .table, .select select, select option
		{
		background-color: #121212;
	}
	.button:not(.colored):not(.datetimepicker-footer-cancel):not(.datepicker-nav-previous):not(.datepicker-nav-next)::hover
		{
		background-color: #121212;
		color: white;
	}
	#addImageDiv path, .profile-pic path {
		color: #121212;
	}
	.input {
		background-color: #121212;
		color: white;
	}
	.message {
		background-color: black;
	}
	.option {
		color: #121212 !important;
	}
	body *:not(a), container *, .subtitle, .label, .content h4, .textarea, .select select
		{
		color: white;
	}
	.content table td, .content table th {
		border-color: rgba(219, 219, 219, .5);
		color: white;
	}
	.footer {
		background-color: #000000;
	}
	#logout:hover span {
		color: #0a0a0a;
	}
	.input::placeholder {
		color: #E0E0E0;;
	}
	textarea::placeholder {
		color: white !important;
		opacity: 0.5;
	}
	.title {
		color: white;
	}
	.card, .box {
		box-shadow: 0 .5em 1em -.125em rgba(10, 10, 10, .9), 0 0 0 1px
			rgba(10, 10, 10, .9);
	}
	.datetimepicker-dummy-input {
		color: white !important;
	}
	#iframe-header {
		background-color: #121212;;
		border-bottom: 1px solid rgba(219, 219, 219, .5);
	}
	@media screen and (max-width: 1024px) {
		.content-background {
			background: rgba(18, 18, 18, 0.9) !important;
		}
		.profile-bottom.dimmed {
			background: rgba(18, 18, 18, 0.9) !important;
		}
	}
}


@media screen and (max-width: 510px) {
	#navbar-text {
		display: none;
	}
}

@media screen and (max-width: 400px) {
	#oauth-div button span {
		font-size: 16px;
	}
	#captcha-image {
		width: 156px;
	}
	#captcha {
		max-width: 100%;
	}
}

@media screen and (max-width: 340px) {
	#oauth-div span {
		font-size: 0.7em ! important;
	}
}

@media screen and (max-width: 420px) {
	#navbar-item-register {
		display: none;
	}
}

@media screen and (max-width: 290px) {
	#oauth-div span {
		font-size: 0.5em ! important;
	}
}

@media screen and (max-width: 280px) {
	#navbar-item-language {
		display: none;
	}
}

/* KAIOS Screns are very small */
@media screen and (max-width: 302px) {
	#audio {
		width: 208px;
	}
	#header-logged-in {
		display: none;
	}
	.profile-bottom .button {
		padding: 12px;
		height: 42px !important;
	}
	#donate-modal svg {
		display: none;
	}
	.modal-content {
		max-height: 100%;
	}
	.modal-content .box {
		border-radius: 0px;
	}
	#search-right {
		display: block;
	}
	.content-background {
		display: none;
	}
	#main-logged-in {
		min-height: calc(100vh - 52px);
	}
	.user-search-div {
		min-height: calc(100vh - 52px);
	}
	.profile-bottom {
		height: initial !important;
	}
	.profile-bottom.dimmed {
		background: rgba(0, 0, 0, 0.0) !important;
	}
	.notification-div {
		min-width: initial !important;
	}
	.notification-card .profile-pic {
		height: 40px;
		width: 40px;
	}
	.messages-card .profile-pic {
		height: 40px;
		width: 40px;
	}
	#message-send-button {
		padding: 0;
		height: 40px !important;
		width: 40px !important;
	}
	#message-send-input {
		width: calc(100% - 52px - 2px) !important;
		padding-top: 0.1em;
		padding-bottom: 0.1em;
		font-size: 1rem;
	}
	#messages-div {
		min-height: calc(100vh - 220px) !important;
	}
	.modal-content .box {
		padding: 6px;
	}
	#donate-cards-div {
		height: calc(100vh - 122px) !important;
	}
	.cards {
		padding: initial !important;
	}
	.card {
		box-shadow: none !important;
	}
	.search-audio {
		display: none;
	}
}

